--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <div id="app"></div>
+    <noscript>
+        <h3>Esta app necesita de JS para funcionar</h3>
+    </noscript>
 </body>
 </html>
